--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ app-root {
     padding: 0;
 }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow: hidden; }
 
 .spacer {
     flex: 1 1 auto;
